TRK-93 feat: method finalization  to atualization role user
