# src/docs/swagger.json
@@ -158,6 +158,35 @@
                 ],
                 "summary": "Display of relation user and role",
                 "responses": {}
+            },
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Management"
+                ],
+                "summary": "Display of relation user and role",
+                "parameters": [
+                    {
+                        "description": "Dados para atualizar a role do usuário",
+                        "name": "usermanagement",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/usermanagementdto.UpdateRelationUserRole"
+                        }
+                    }
+                ],
+                "responses": {}
             }
         }
     },
@@ -201,6 +230,17 @@
                 },
                 "password": {
                     "type": "string"
+                }
+            }
+        },
+        "usermanagementdto.UpdateRelationUserRole": {
+            "type": "object",
+            "properties": {
+                "id_role": {
+                    "type": "integer"
+                },
+                "id_user": {
+                    "type": "integer"
                 }
             }
         }
