# src/pkg/dto/usermanagementdto/updateroleuser.go
@@ -1,0 +1,6 @@
+package usermanagementdto
+
+type UpdateRelationUserRole struct {
+	IDUser int64 `json:"id_user"`
+	IDRole int64 `json:"id_role"`
+}
