# src/pkg/routes/routes.go
@@ -47,6 +47,7 @@ func HandlleRequest() {
 		usermanagement := protected.Group("/usermanagement")
 		{
 			usermanagement.GET("/data", middleware.Auth(), controller.GetRelationUserRole)
+			usermanagement.PUT("/update", middleware.Auth(), controller.UpdateRoleUser)
 		}
 	}
 
